k8s/apps/default/audiobookshelf/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  labels:
    app.kubernetes.io/name: audiobookshelf
    app.kubernetes.io/instance: audiobookshelf
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: audiobookshelf
    app.kubernetes.io/instance: audiobookshelf
