k8s/apps/default/audiobookshelf/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
  labels:
    app.kubernetes.io/name: audiobookshelf
    app.kubernetes.io/instance: audiobookshelf
spec:
  hostnames:
    - audiobookshelf.cbannister.xyz
  parentRefs:
    - name: external-cbannister-xyz
      namespace: network
      kind: ListenerSet
      sectionName: https
  rules:
    - backendRefs:
        - name: audiobookshelf
          port: 80
